fix gear menu placement in new files
fixes: CNVS-15264

test plan:
open new files,
click the gear menu on the file/folder at the bottom
of the list.
it should not appear above the cog like this
http://screencast.com/t/baNGQo4ma5tw

Reviewed-on: https://gerrit.instructure.com/40793
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Clare Strong <clare@instructure.com>
Product-Review: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/pages/ember_files.scss
+++ b/app/stylesheets/pages/ember_files.scss
@@ -322,3 +322,8 @@ i[class*=current_uploads__instructions__icon-upload] {
   font-size: 1.8em;
   font-weight: bold;
 }
+
+
+// Hack, Hack, Hack!
+// to make sure that there is space for the ItemCog menu to appear below the bottom thing in the list of files
+#footer { min-height: 80px }
